RAIN-6398 : UI Login screen alignment issue fixed

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/container.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/container.scss
@@ -24,7 +24,12 @@
     height: 100%;
   }
 }
-
+.employee-login-home-footer{
+  @apply flex fixed bottom-0 h-10 bg-grey-bg pb-md pt-sm justify-center w-full;
+  img{
+    @apply ml-sm
+  }
+}
 .fieldInspectionWrapper{
   border: 1px solid #d6d5d4;
   padding: 16px;
